{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 340,
  "lineage": "ef68e067-e0bc-8d01-26e9-2902a05681d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382788479:loadbalancer/app/store-alb/45665a789e6a5bbf",
            "arn_suffix": "app/store-alb/45665a789e6a5bbf",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-store-alb-2056887998.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382788479:loadbalancer/app/store-alb/45665a789e6a5bbf",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "store-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e4f8f3e7e55a3e40"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d3432e114589a73"
              },
              {
                "subnet_id": "subnet-0624fab12f69bf368"
              }
            ],
            "subnets": [
              "subnet-00d3432e114589a73",
              "subnet-0624fab12f69bf368"
            ],
            "tags": {
              "Name": "store-alb"
            },
            "tags_all": {
              "Name": "store-alb"
            },
            "vpc_id": "vpc-0d7feb70d1b9c7848",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.private",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382788479:listener/app/store-alb/45665a789e6a5bbf/c4c9a79df1e18e3c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382788479:targetgroup/store-lb-userService-tg/9657397d6968e545",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382788479:listener/app/store-alb/45665a789e6a5bbf/c4c9a79df1e18e3c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:992382788479:loadbalancer/app/store-alb/45665a789e6a5bbf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.userService_target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.private",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d667afac6e57eb7d",
            "association_id": "eipassoc-03b19180f7d59d29a",
            "domain": "vpc",
            "id": "eipalloc-0d667afac6e57eb7d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-018487524ca66a75f",
            "private_dns": "ip-10-0-1-237.ec2.internal",
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-3-226-63-204.compute-1.amazonaws.com",
            "public_ip": "3.226.63.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "APIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1:992382788479:instance/i-0567f914262125f7a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0567f914262125f7a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c07ebe254149b87e",
            "private_dns": "ip-10-0-1-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.160",
            "public_dns": "ec2-54-224-42-226.compute-1.amazonaws.com",
            "public_ip": "54.224.42.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053a0ad663e5d7cce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bcc8886474d0d3c",
            "tags": {
              "Name": "APIGateway"
            },
            "tags_all": {
              "Name": "APIGateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033127865352d1437",
              "sg-09a0ae0c0b923cc40"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_internet_traffic",
            "aws_security_group.allow_ssh",
            "aws_subnet.public",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1:992382788479:instance/i-0d1a03cc5ad51f876",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1a03cc5ad51f876",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026c3896744248e41",
            "private_dns": "ip-10-0-1-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-54-198-251-208.compute-1.amazonaws.com",
            "public_ip": "54.198.251.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0138f4d538507b6f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bcc8886474d0d3c",
            "tags": {
              "Name": "kafka"
            },
            "tags_all": {
              "Name": "kafka"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033127865352d1437",
              "sg-08b12dbf08d1e8362",
              "sg-09a0ae0c0b923cc40"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_internet_traffic",
            "aws_security_group.allow_ssh",
            "aws_security_group.kafka_access_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.public",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:internet-gateway/igw-085377c28bbe46c16",
            "id": "igw-085377c28bbe46c16",
            "owner_id": "992382788479",
            "tags": {
              "Name": "store-igw"
            },
            "tags_all": {
              "Name": "store-igw"
            },
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "userService_path",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382788479:targetgroup/store-lb-userService-tg/9657397d6968e545",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382788479:listener-rule/app/store-alb/45665a789e6a5bbf/c4c9a79df1e18e3c/6c7af3dd8398484a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/users/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382788479:listener-rule/app/store-alb/45665a789e6a5bbf/c4c9a79df1e18e3c/6c7af3dd8398484a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:992382788479:listener/app/store-alb/45665a789e6a5bbf/c4c9a79df1e18e3c",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_alb_listener.listener",
            "aws_lb_target_group.userService_target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.private",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "userService_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382788479:targetgroup/store-lb-userService-tg/9657397d6968e545",
            "arn_suffix": "targetgroup/store-lb-userService-tg/9657397d6968e545",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382788479:targetgroup/store-lb-userService-tg/9657397d6968e545",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:992382788479:loadbalancer/app/store-alb/45665a789e6a5bbf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "store-lb-userService-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "store-lb-userService-tg"
            },
            "tags_all": {
              "Name": "store-lb-userService-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d667afac6e57eb7d",
            "association_id": "eipassoc-03b19180f7d59d29a",
            "connectivity_type": "public",
            "id": "nat-0d589e40a4b316249",
            "network_interface_id": "eni-018487524ca66a75f",
            "private_ip": "10.0.1.237",
            "public_ip": "3.226.63.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06bcc8886474d0d3c"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.aws-igw",
            "aws_subnet.public",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-085377c28bbe46c16",
            "id": "r-rtb-03e35e490b1aaf5011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e35e490b1aaf501",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:route-table/rtb-0626f2a61626b5d81",
            "id": "rtb-0626f2a61626b5d81",
            "owner_id": "992382788479",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d589e40a4b316249",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.aws-igw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:route-table/rtb-03e35e490b1aaf501",
            "id": "rtb-03e35e490b1aaf501",
            "owner_id": "992382788479",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085377c28bbe46c16",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05742899d3dddcf0a",
            "route_table_id": "rtb-0626f2a61626b5d81",
            "subnet_id": "subnet-00d3432e114589a73"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.aws-igw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.store-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13cbf8386bf2657",
            "route_table_id": "rtb-0626f2a61626b5d81",
            "subnet_id": "subnet-0624fab12f69bf368"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.aws-igw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c62a8a062c6d5ca",
            "route_table_id": "rtb-03e35e490b1aaf501",
            "subnet_id": "subnet-06bcc8886474d0d3c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_internet_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group/sg-09a0ae0c0b923cc40",
            "description": "Allow internet http and TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a0ae0c0b923cc40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_tls",
            "name_prefix": "",
            "owner_id": "992382788479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_tls"
            },
            "tags_all": {
              "Name": "allow_http_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group/sg-033127865352d1437",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-033127865352d1437",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "992382788479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "tags_all": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group/sg-009d3bae1e376be65",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-009d3bae1e376be65",
            "ingress": [],
            "name": "db-access-sg",
            "name_prefix": "",
            "owner_id": "992382788479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-access-sg"
            },
            "tags_all": {
              "Name": "db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group/sg-0da3d8ae2a7d29329",
            "description": "Allow access to kafka",
            "egress": [],
            "id": "sg-0da3d8ae2a7d29329",
            "ingress": [],
            "name": "kafka-access-sg",
            "name_prefix": "",
            "owner_id": "992382788479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-access-sg"
            },
            "tags_all": {
              "Name": "kafka-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group/sg-08b12dbf08d1e8362",
            "description": " Kafka Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b12dbf08d1e8362",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da3d8ae2a7d29329"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "kafka-sg",
            "name_prefix": "",
            "owner_id": "992382788479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-access-sg"
            },
            "tags_all": {
              "Name": "kafka-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kafka_access_sg",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group/sg-0e4f8f3e7e55a3e40",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4f8f3e7e55a3e40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240318145947974200000004",
            "name_prefix": "terraform-",
            "owner_id": "992382788479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "store-lb-sg"
            },
            "tags_all": {
              "Name": "store-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group/sg-055dede56f0ffaf7c",
            "description": "Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055dede56f0ffaf7c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009d3bae1e376be65"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "992382788479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-access-sg"
            },
            "tags_all": {
              "Name": "db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_access_sg",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:subnet/subnet-00d3432e114589a73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d3432e114589a73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382788479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:subnet/subnet-0624fab12f69bf368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0624fab12f69bf368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382788479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:subnet/subnet-06bcc8886474d0d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bcc8886474d0d3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382788479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APIG subnet"
            },
            "tags_all": {
              "Name": "APIG subnet"
            },
            "vpc_id": "vpc-0d7feb70d1b9c7848"
          },
          "dependencies": [
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "store-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:vpc/vpc-0d7feb70d1b9c7848",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba0bac1ae53b2eaa",
            "default_route_table_id": "rtb-02434d810ad886b67",
            "default_security_group_id": "sg-007ab39631ae3ac7f",
            "dhcp_options_id": "dopt-09e81fa5fa56259aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7feb70d1b9c7848",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02434d810ad886b67",
            "owner_id": "992382788479",
            "tags": {
              "Name": "store-vpc"
            },
            "tags_all": {
              "Name": "store-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group-rule/sgr-095658eb90fc6f6b2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-095658eb90fc6f6b2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09a0ae0c0b923cc40",
            "security_group_rule_id": "sgr-095658eb90fc6f6b2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_internet_traffic",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group-rule/sgr-0a748db5b973e4811",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a748db5b973e4811",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09a0ae0c0b923cc40",
            "security_group_rule_id": "sgr-0a748db5b973e4811",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_internet_traffic",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group-rule/sgr-0d10d45d60c16934d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d10d45d60c16934d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-033127865352d1437",
            "security_group_rule_id": "sgr-0d10d45d60c16934d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382788479:security-group-rule/sgr-0ed226be92c73d2db",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0ed226be92c73d2db",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09a0ae0c0b923cc40",
            "security_group_rule_id": "sgr-0ed226be92c73d2db",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_internet_traffic",
            "aws_vpc.store-vpc"
          ]
        }
      ]
    }
  ]
}